# eeg-eye-sde-completion

./: .gitignore  README.md  pyproject.toml
docs/: optimization_ablation_summary.csv  slot_sde_missing_rate_results.csv
scripts/: compare_runs.py  evaluate_checkpoint.py  train_emotion_adv.py
src/eeg_eye_completion/: __init__.py  data.py  evaluate.py  train.py  visualization.py
src/eeg_eye_completion/models/: __init__.py  adversarial.py  diffusion.py
src/eeg_eye_completion/models/transformers_encoder/: __init__.py  position_embedding.py  transformer.py
tools/: inspect_feature_zips.py
